--- a/etape1.html
+++ b/etape1.html
@@ -20,7 +20,7 @@
                     <li><a href="etape1.html" title="Colored Design &Eacute;tape 1">&Eacute;tape n° 1</a></li>
                     <li><a href="etape2.html" title="Colored Design &Eacute;tape 2">&Eacute;tape n° 2</a></li>
                     <li><a href="etape3.html" title="Colored Design &Eacute;tape 3">&Eacute;tape n° 3</a></li>
-                    <li><a href="#" title="Colored Design &Eacute;tape 4">&Eacute;tape n° 4</a></li>
+                    <li><a href="etape4.html" title="Colored Design &Eacute;tape 4">&Eacute;tape n° 4</a></li>
                     <li><a href="#" title="Colored Design &Eacute;tape 5">&Eacute;tape n° 5</a></li>
                 </ul>
             </nav>
