fin colored design

--- a/exo6.html
+++ b/exo6.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Colored Design - &Eacute;tape 3</title>
     <!-- typo embarqué (en cdn) depuis google font  -->
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Serif:400,700|Roboto:400,500i,700&display=swap" rel="stylesheet">  
+    <link rel="stylesheet" href="css/style6.css">
 </head>
 <body>
     <!-- cette division contient l'ensemble de la page on peut parfois l'appeler "wrapper"  "contenu" ou parfois div id="main" etc. -->
@@ -31,7 +31,7 @@
         </header>
         <!-- contenu principal  -->
         <main>
-            <h2>Un sous-titre 1  /// étape 4</h2>
+            <h2>Un sous-titre 1  /// Exo 6</h2>
             <p>amet consectetur adipisicing elit. Enim laudantium culpa ex amet, nulla veniam tempore iste obcaecati assumenda aut dicta facilis, architecto eum officia eos delectus minima laboriosam recusandae!</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione enim, nulla delectus debitis incidunt porro molestiae repudiandae sit eos nisi? Quasi laudantium atque iste numquam consequatur! Rerum optio voluptates natus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit aspernatur rerum excepturi aliquid nostrum neque facilis, odio aliquam, omnis in ad quam accusamus quas possimus, architecto assumenda placeat eius provident.</p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores ipsam ad cum labore culpa iste fugiat porro tenetur placeat. <a href="#" title="Lien">Itaque delectus asperiores dolorum corporis voluptates fugiat</a>, id quod eaque illum!</p>
